Fixed spacing in thumbnials.

--- a/static/css/floto.css
+++ b/static/css/floto.css
@@ -13,7 +13,7 @@ body {
 }
 
 .row-fluid {
-	margin-left: 0px;
+	margin-left: 12px;
 }
 
 .thumbnails > li {
